--- a/RBS2020.vcxproj
+++ b/RBS2020.vcxproj
@@ -149,13 +149,15 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\actors.h" />
+    <ClInclude Include="include\headparts.h" />
+    <ClInclude Include="include\morph.h" />
+    <ClInclude Include="include\morphProcedural.h" />
+    <ClInclude Include="include\niftyFunctions.h" />
+    <ClInclude Include="include\outfit.h" />
+    <ClInclude Include="include\plugin.h" />
     <ClInclude Include="include\version.h" />
     <ClInclude Include="include\versiondb.h" />
-    <ClInclude Include="src\actors.h" />
-    <ClInclude Include="src\morph.h" />
-    <ClInclude Include="src\morphProcedural.h" />
-    <ClInclude Include="src\outfit.h" />
-    <ClInclude Include="src\plugin.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CommonLibSSE\CommonLibSSE.vcxproj">
@@ -167,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\actors.cpp" />
+    <ClCompile Include="src\headparts.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\morph.cpp" />
     <ClCompile Include="src\morphProcedural.cpp" />
